--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,14 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidClientForGigaChat"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <service
+            android:name=".WSHandler"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".ActivityMain"
+            android:exported="false" />
         <activity
             android:name=".ActivityAuthorization"
             android:exported="false" />
         <activity
             android:name=".Loader"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
