--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Sep 11 16:12:29 MSK 2023
-sdk.dir=C\:\\Users\\son25\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Fluorum\\AppData\\Local\\Android\\Sdk
