--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ com_crashlytics_export_strings.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
+android/local.properties
+.android/local.properties
 
 # Gradle generated files
 .gradle/
