--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,7 @@
 com_crashlytics_export_strings.xml
 
 # Local configuration file (sdk path, etc)
-local.properties
-*/local.properties
-.android/local.properties
+*.properties
 
 # Gradle generated files
 .gradle/
