--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ ktor-client-android = "2.3.4"
 ktor-client-core = "2.3.4"
 kotlinx-serialization-json = "1.6.0"
 ui-graphics-android = "1.5.3"
+security-crypto = "1.1.0-alpha06"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -27,6 +28,7 @@ ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref =
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 androidx-ui-graphics-android = { group = "androidx.compose.ui", name = "ui-graphics-android", version.ref = "ui-graphics-android" }
 jsoniter = { group = "com.jsoniter", name = "jsoniter", version.ref = "jsoniter" }
+androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version = "1.1.0-alpha02" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
