--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,17 +13,12 @@
         android:theme="@style/Theme.AndroidClientForGigaChat"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <service
-            android:name=".WSHandler"
-            android:enabled="true"
-            android:exported="true" />
-
         <activity
             android:name=".ActivityMain"
             android:exported="false" />
         <activity
             android:name=".ActivityAuthorization"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Loader"
             android:exported="true" >
@@ -35,5 +28,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
