--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityRegistration"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityRegister"
+            android:exported="false" />
+        <activity
+            android:name=".chat"
+            android:exported="false" />
+
+        <service
+            android:name=".WSHandler"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
             android:name=".ActivityRegister"
             android:exported="false" />
         <activity
