--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ActivityMain"
+            android:name=".main.ActivityMain"
             android:exported="false" />
         <activity
-            android:name=".ActivityAuthorization"
+            android:name=".authorization.ActivityAuthorization"
             android:exported="false" />
         <activity
             android:name=".Loader"
